[package]
name = "cuda-skill"
version = "0.1.0"
edition = "2021"
description = "Skill management with proficiency levels and synergies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-skill"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

